<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CART" Id="{3456120e-8460-4c6c-bd03-2d96c3a966e0}">
    <Declaration><![CDATA[TYPE ST_CART :
STRUCT
	nNAME: STRING;
	posX:INT;
	posY:INT;
	color:INT;
	o_color:INT;
	position: INT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>