<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_CART" Id="{9fd11ec1-6f9c-4a32-a27f-6e39cedd7563}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CART
VAR_INPUT
	stCART: ST_CART;
END_VAR
VAR_OUTPUT
	
END_VAR

VAR
	inner_counter: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Action Name="A_STEP" Id="{14523dd1-b206-4535-943a-bfd0c09ba5ec}">
      <Implementation>
        <ST><![CDATA[IF stCART.position < num_of_carts*2 THEN
	


	IF stCART.position = supply_station_num THEN
		IF NOT MAIN.fbSUPPLY.bSkip THEN
			stCART.color:=2;
		ELSE
			stCART.color:=99;
		END_IF
		stCART.o_color:=2;
	END_IF  
	IF stCART.position = separate1_station_num THEN
		IF NOT MAIN.fbSEPARATION1.bSkip THEN
			IF stCART.color = 2 THEN
				stCART.color:=3;
			END_IF
		ELSE
			stCART.color:=99;
		END_IF
		stCART.o_color:=3;
		
	END_IF 
	IF stCART.position = separate2_station_num THEN
		IF NOT MAIN.fbSEPARATION2.bSkip THEN
			IF stCART.color = 3 THEN
				stCART.color:=4;
			END_IF
		ELSE
			stCART.color:=99;
		END_IF
		stCART.o_color:=4;
	END_IF 
	
	IF stCART.position = bullet_check_num THEN
		IF bBulletSensor THEN
				stCART.color:=89;
		END_IF
	END_IF 
	
	IF stCART.position = clean_station_num THEN
		IF NOT MAIN.fbCLEAN.bSkip THEN
			IF stCART.color = 4 THEN
				stCART.color:=1;
			END_IF
		ELSE
			stCART.color:=99;
		END_IF
		stCART.o_color:=1;
	END_IF 
	stCART.position:= stCART.position+1;
	stCART.posX:=posArrX[stCART.position];
	stCART.posY:=posArrY[stCART.position];
ELSE
	stCART.position:= 1;
	stCART.posX:=posArrX[stCART.position];
	stCART.posY:=posArrY[stCART.position];
	
END_IF

]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>