<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PISTONS_CYCLE" Id="{b4b09dc6-60ac-43be-9308-062e2f3418e2}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PISTONS_CYCLE
VAR
	
	bSTARTUP: BOOL:=FALSE;
	counter: INT;
	MANUALcOUNTER:int:=0;
	timimg: REAL:=0.2;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT bSTARTUP THEN
	
	stPISTON_PARAM[1].nNAME:='FEEDER PUSHER';
	stPISTON_PARAM[1].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[1].openTime:=timimg;
	stPISTON_PARAM[1].closeTime:=timimg;
	stPISTON_PARAM[1].timeoutOpen:=T#3S;
	stPISTON_PARAM[1].timeoutClose:=T#3S;
	stPISTON_PARAM[1].ePISTON_TYPE:= 0;
	
	
	stPISTON_PARAM[2].nNAME:='FEEDER HOLDER';
	stPISTON_PARAM[2].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[2].openTime:=timimg;
	stPISTON_PARAM[2].closeTime:=timimg;
	stPISTON_PARAM[2].timeoutOpen:=T#2S;
	stPISTON_PARAM[2].timeoutClose:=T#2S;
	stPISTON_PARAM[2].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[15].nNAME:='FEEDER OPENER';
	stPISTON_PARAM[15].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[15].openTime:=timimg;
	stPISTON_PARAM[15].closeTime:=timimg;
	stPISTON_PARAM[15].timeoutOpen:=T#2S;
	stPISTON_PARAM[15].timeoutClose:=T#2S;
	stPISTON_PARAM[15].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[3].nNAME:='SEPARATE1 LIFT';
	stPISTON_PARAM[3].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[3].openTime:=timimg;
	stPISTON_PARAM[3].closeTime:=timimg;
	stPISTON_PARAM[3].timeoutOpen:=T#3S;
	stPISTON_PARAM[3].timeoutClose:=T#3S;
	stPISTON_PARAM[3].ePISTON_TYPE:= 0;
	
	
	stPISTON_PARAM[4].nNAME:='SEPARATE1 COLET';
	stPISTON_PARAM[4].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[4].openTime:=timimg;
	stPISTON_PARAM[4].closeTime:=timimg;
	stPISTON_PARAM[4].timeoutOpen:=T#3S;
	stPISTON_PARAM[4].timeoutClose:=T#3S;
	stPISTON_PARAM[4].ePISTON_TYPE:= 0;
	
	
	stPISTON_PARAM[5].nNAME:='SEPARATE1 PULL';
	stPISTON_PARAM[5].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[5].openTime:=timimg;
	stPISTON_PARAM[5].closeTime:=timimg;
	stPISTON_PARAM[5].timeoutOpen:=T#3S;
	stPISTON_PARAM[5].timeoutClose:=T#3S;
	stPISTON_PARAM[5].ePISTON_TYPE:= 0;
	
	
	stPISTON_PARAM[6].nNAME:='SEPARATE1 TRAY';
	stPISTON_PARAM[6].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[6].openTime:=timimg;
	stPISTON_PARAM[6].closeTime:=timimg;
	stPISTON_PARAM[6].timeoutOpen:=T#3S;
	stPISTON_PARAM[6].timeoutClose:=T#3S;
	stPISTON_PARAM[6].ePISTON_TYPE:= 0;
	
	
	stPISTON_PARAM[7].nNAME:='SEPARATE1 PUSH PINS';
	stPISTON_PARAM[7].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[7].openTime:=timimg;
	stPISTON_PARAM[7].closeTime:=timimg;
	stPISTON_PARAM[7].timeoutOpen:=T#3S;
	stPISTON_PARAM[7].timeoutClose:=T#3S;
	stPISTON_PARAM[7].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[16].nNAME:='SEPARATE1 TRAY PUSHER';
	stPISTON_PARAM[16].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[16].openTime:=timimg;
	stPISTON_PARAM[16].closeTime:=timimg;
	stPISTON_PARAM[16].timeoutOpen:=T#3S;
	stPISTON_PARAM[16].timeoutClose:=T#3S;
	stPISTON_PARAM[16].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[17].nNAME:='SEPARATE1 TRAY DOOR';
	stPISTON_PARAM[17].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[17].openTime:=timimg;
	stPISTON_PARAM[17].closeTime:=timimg;
	stPISTON_PARAM[17].timeoutOpen:=T#3S;
	stPISTON_PARAM[17].timeoutClose:=T#3S;
	stPISTON_PARAM[17].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[8].nNAME:='SEPARATE2 LIFT';
	stPISTON_PARAM[8].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[8].openTime:=timimg;
	stPISTON_PARAM[8].closeTime:=timimg;
	stPISTON_PARAM[8].timeoutOpen:=T#3S;
	stPISTON_PARAM[8].timeoutClose:=T#3S;
	stPISTON_PARAM[8].ePISTON_TYPE:= 0;
	
	
	stPISTON_PARAM[9].nNAME:='SEPARATE2 COLET';
	stPISTON_PARAM[9].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[9].openTime:=timimg;
	stPISTON_PARAM[9].closeTime:=timimg;
	stPISTON_PARAM[9].timeoutOpen:=T#3S;
	stPISTON_PARAM[9].timeoutClose:=T#3S;
	stPISTON_PARAM[9].ePISTON_TYPE:= 0;
	
	
	stPISTON_PARAM[10].nNAME:='SEPARATE2 PULL';
	stPISTON_PARAM[10].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[10].openTime:=timimg;
	stPISTON_PARAM[10].closeTime:=timimg;
	stPISTON_PARAM[10].timeoutOpen:=T#3S;
	stPISTON_PARAM[10].timeoutClose:=T#3S;
	stPISTON_PARAM[10].ePISTON_TYPE:= 0;
	
	
	stPISTON_PARAM[11].nNAME:='SEPARATE2 TRAY';
	stPISTON_PARAM[11].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[11].openTime:=timimg;
	stPISTON_PARAM[11].closeTime:=timimg;
	stPISTON_PARAM[11].timeoutOpen:=T#3S;
	stPISTON_PARAM[11].timeoutClose:=T#3S;
	stPISTON_PARAM[11].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[12].nNAME:='SEPARATE2 PUSH PINS';
	stPISTON_PARAM[12].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[12].openTime:=timimg;
	stPISTON_PARAM[12].closeTime:=timimg;
	stPISTON_PARAM[12].timeoutOpen:=T#3S;
	stPISTON_PARAM[12].timeoutClose:=T#3S;
	stPISTON_PARAM[12].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[18].nNAME:='SEPARATE2 TRAY PUSHER';
	stPISTON_PARAM[18].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[18].openTime:=timimg;
	stPISTON_PARAM[18].closeTime:=timimg;
	stPISTON_PARAM[18].timeoutOpen:=T#3S;
	stPISTON_PARAM[18].timeoutClose:=T#3S;
	stPISTON_PARAM[18].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[19].nNAME:='SEPARATE2 TRAY DOOR';
	stPISTON_PARAM[19].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[19].openTime:=timimg;
	stPISTON_PARAM[19].closeTime:=timimg;
	stPISTON_PARAM[19].timeoutOpen:=T#3S;
	stPISTON_PARAM[19].timeoutClose:=T#3S;
	stPISTON_PARAM[19].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[13].nNAME:='DISPOSE OPENER';
	stPISTON_PARAM[13].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[13].openTime:=0.5;
	stPISTON_PARAM[13].closeTime:=0.5;
	stPISTON_PARAM[13].timeoutOpen:=T#3S;
	stPISTON_PARAM[13].timeoutClose:=T#3S;
	stPISTON_PARAM[13].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[14].nNAME:='CLEAN';
	stPISTON_PARAM[14].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[14].openTime:=timimg;
	stPISTON_PARAM[14].closeTime:=timimg;
	stPISTON_PARAM[14].timeoutOpen:=T#3S;
	stPISTON_PARAM[14].timeoutClose:=T#3S;
	stPISTON_PARAM[14].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[20].nNAME:='EXTRA ';
	stPISTON_PARAM[20].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[20].openTime:=timimg;
	stPISTON_PARAM[20].closeTime:=timimg;
	stPISTON_PARAM[20].timeoutOpen:=T#3S;
	stPISTON_PARAM[20].timeoutClose:=T#3S;
	stPISTON_PARAM[20].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[21].nNAME:='DROP PUSHER';
	stPISTON_PARAM[21].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[21].openTime:=0.5;
	stPISTON_PARAM[21].closeTime:=0.5;
	stPISTON_PARAM[21].timeoutOpen:=T#3S;
	stPISTON_PARAM[21].timeoutClose:=T#3S;
	stPISTON_PARAM[21].ePISTON_TYPE:= 0;
	
	stPISTON_PARAM[22].nNAME:='DROP OPENER';
	stPISTON_PARAM[22].bOPEN_BY_DEFAULT:=FALSE;
	stPISTON_PARAM[22].openTime:=timimg;
	stPISTON_PARAM[22].closeTime:=timimg;
	stPISTON_PARAM[22].timeoutOpen:=T#3S;
	stPISTON_PARAM[22].timeoutClose:=T#3S;
	stPISTON_PARAM[22].ePISTON_TYPE:= 0;
	
	FOR counter:=1 TO iNUMBER_OF_PISTONS BY 1 DO
		fbPiston[counter](stPISTON:=stPISTON_PARAM[counter]);
	END_FOR;
	
	bSTARTUP:=TRUE;
END_IF

MANUALcOUNTER:=0;
FOR counter:=1 TO iNUMBER_OF_PISTONS BY 1 DO
	IF fbPiston[counter].bMANUAL THEN
		bManual_mode:=TRUE;
		manualCounter:= manualCounter+1;
	END_IF
	fbPiston[counter]();
END_FOR;
//feeder();
IF manualCounter = 0 THEN
	bManual_mode:=FALSE;
END_IF

//fbPiston[1].bDepened_open1:=TRUE;   //supply 1
//fbPiston[2].bDepened_open1:=TRUE;   //supply 2]]></ST>
    </Implementation>
    <Action Name="feeder" Id="{d7885f46-4b07-41bf-882b-037660cca044}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">"//'FEEDER PUSHER'"</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"FB_PISTON"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"fbPiston[1]"</v>
                          <v n="Type">"FB_PISTON"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">132L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems">
                            <n />
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"stPISTON_PARAM[1]"</v>
                              <v n="Type">"ST_PISTON"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">135L</v>
                            </o>
                            <v n="Id">134L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">137L</v>
                            </o>
                            <v n="Id">136L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">139L</v>
                            </o>
                            <v n="Id">138L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">141L</v>
                            </o>
                            <v n="Id">140L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">143L</v>
                            </o>
                            <v n="Id">142L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>stPISTON</v>
                            <v>bDepened_open1</v>
                            <v>bDepened_open2</v>
                            <v>bDepened_close1</v>
                            <v>bDepened_close2</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>REFERENCE TO ST_PISTON</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>PistonStatus</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>ePistonStatus</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">133L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">103L</v>
                  </o>
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">"//'FEEDER HOLDER'"</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"FB_PISTON"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"fbPiston[2]"</v>
                          <v n="Type">"FB_PISTON"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">120L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems">
                            <n />
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"stPISTON_PARAM[2]"</v>
                              <v n="Type">"ST_PISTON"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">123L</v>
                            </o>
                            <v n="Id">122L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">125L</v>
                            </o>
                            <v n="Id">124L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">127L</v>
                            </o>
                            <v n="Id">126L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">129L</v>
                            </o>
                            <v n="Id">128L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"TRUE"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">131L</v>
                            </o>
                            <v n="Id">130L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>stPISTON</v>
                            <v>bDepened_open1</v>
                            <v>bDepened_open2</v>
                            <v>bDepened_close1</v>
                            <v>bDepened_close2</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>REFERENCE TO ST_PISTON</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>PistonStatus</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>ePistonStatus</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">121L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">8L</v>
                  </o>
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" />
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <LineIds Name="PISTONS_CYCLE">
      <LineId Id="219" Count="206" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>